@@ -519,6 +519,8 @@ test wm-transient-6.1 { a withdrawn transient does not track
     wm withdraw .subject
     wm withdraw .master
     wm deiconify .master
+    # idle handler should not map the transient
+    update
     wm state .subject
 } {withdrawn}
 
@@ -533,12 +535,16 @@ test wm-transient-6.2 { a withdrawn transient does not track
     wm withdraw .subject
     wm withdraw .master
     wm deiconify .master
+    # idle handler should not map the transient
+    update
     lappend results [wm state .subject]
     wm deiconify .subject
     lappend results [wm state .subject]
     wm withdraw .master
     lappend results [wm state .subject]
     wm deiconify .master
+    # idle handler should map transient
+    update
     lappend results [wm state .subject]
 } {withdrawn normal withdrawn normal}
 
@@ -725,18 +731,14 @@ test wm-minsize-1.3 {usage} {
 } {1 {wrong # arguments: must be "wm minsize window ?width height?"}}
 
 test wm-minsize-1.4 {usage} {
-    wm minsize .t
-} {1 1}
-
-test wm-minsize-1.5 {usage} {
     list [catch {wm minsize . x 100} msg]  $msg
 } {1 {expected integer but got "x"}}
 
-test wm-minsize-1.6 {usage} {
+test wm-minsize-1.5 {usage} {
     list [catch {wm minsize . 100 bogus} msg]  $msg
 } {1 {expected integer but got "bogus"}}
 
-test wm-minsize-1.7 {usage} {
+test wm-minsize-1.6 {usage} {
     wm minsize .t 200 150
     wm minsize .t
 } {200 150}
