@@ -2211,9 +2211,9 @@ WmWaitMapProc(clientData, eventPtr)
     if (masterPtr == NULL)
         return;
 
-    if (eventPtr->type == MapNotify &&
-            !(winPtr->wmInfoPtr->flags & WM_TRANSIENT_WITHDRAWN)) {
-        (void) TkpWmSetState(winPtr, NormalState);
+    if (eventPtr->type == MapNotify) {
+        if (!(winPtr->wmInfoPtr->flags & WM_TRANSIENT_WITHDRAWN))
+            (void) TkpWmSetState(winPtr, NormalState);
     } else if (eventPtr->type == UnmapNotify) {
         (void) TkpWmSetState(winPtr, WithdrawnState);
     }
